--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.8.0",
     "@astrojs/mdx": "^0.14.0",
     "@astrojs/rss": "^2.0.0",
-    "@astrojs/sitemap": "^1.0.0"
+    "@astrojs/sitemap": "^1.0.0",
+    "astro": "^1.8.0",
+    "astro-icon": "^0.8.0",
+    "astro-tooltips": "^0.6.1"
   }
 }
